assets/sass/_chat.scss
$convos-input-height: 46px;

.convos-chat {
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow: hidden; // This fixes some weird horizontal scrolling in Chrome on iPhone
}

.convos-dialog-container,
.convos-settings {
  position: relative;
  height: 100%;
}

@media #{$large-and-up} {
  .convos-dialog-container, .convos-settings {
    margin-left: $main-menu-width;
  }
  body.has-sidebar {
    .convos-dialog-container, .convos-settings {
      margin-right: $sidebar-width;
    }
  }
}

.convos-dialog-container,
.convos-settings {
  main {
    @include under-header;
    width: 100%;
    padding: $gutter-width $gutter-width / 2;
    z-index: 10;
  }
}

.convos-dialog-container main { bottom: $convos-input-height; }
.convos-dialog-container.inactive { display: none; }
.convos-settings main { bottom: 0; }

.convos-input {
  background-color: $body-bg;
  border-top: 1px solid lighten($input-border-color, 20%);
  padding: 8px $gutter-width / 2 0 $gutter-width / 2;
  width: 100%;
  overflow: hidden;
  position: absolute;
  bottom: 0;
  z-index: $z-index-header - 1;

  // send button
  i {
    font-size: 2rem;
    cursor: pointer;
    width: 2rem;
    float: right;
    transition: color .2s;
    &, &.active { color: $input-focus-color; }
  }

  textarea.materialize-textarea {
    padding: 0;
    margin: 0;
    box-shadow: none;
    width: calc(100% - 2rem);
    height: $convos-input-height - 22px;
    min-height: 2rem;
    max-height: 9.5rem;
    overflow: auto;

    &, &:focus { border: 0; }
  }
}

.convos-settings {
  main { max-width: $readable-width; }
  .divider { margin: 2rem 0; }
}

.convos-message {
  display: block;
  position: relative;
  margin: $dialog-spacing * 2 0;
  word-wrap: break-word;

  &.error, &.notice {
    padding-left: $gutter-width / 2;
    border-left: 2px solid $input-border-color;
  }
  &.action {
    .message, a.title {
      font-style: italic;
      display: inline;
    }
    .link-embedder {
      font-style: normal;
    }
  }
  &.day-changed {
    color: lighten($off-black, 40%);
    text-align: center;
    border-bottom: 1px solid lighten($input-border-color, 24%);
    margin-bottom: $gutter-width;
    height: $gutter-width / 2;
    &:hover { background: transparent; }
    span { background: $body-bg; padding: 0 8px; }
  }
  &.error {
    border-left: 2px solid $error-border-color;
    color: $notice-text-color;
    a { color: lighten($error-text-color, 20%); }
  }
  &.highlight .message {
    background-color: $highlight-bg-color;
    margin-left: -0.5rem;
    padding-left: 0.5rem;
  }
  &.notice {
    border-left: 2px solid $notice-border-color;
    color: lighten($text-color, 40%);
    a { color: lighten($link-color, 20%); }
  }
  &.same-user {
    margin-top: -$dialog-spacing;
  }
  &.same-user {
    a.title, .secondary-content {
      opacity: 0;
      transition: opacity 1000ms;
    }
    &:hover .secondary-content {
      display: block;
      opacity: 1;
      color: lighten($text-color, 40%);
      transition: opacity 300ms;
    }
  }

  .message {
    a { color: inherit; text-decoration: underline; }
    a:hover { text-decoration: none; }

    .material-icons {
      vertical-align: text-top;
      font-size: 18px;
      margin-left: 4px;
    }
  }

  code {
    background: darken($body-bg, 5%);
    outline: 1px solid darken($body-bg, 15%);
    padding: 1px 3px;
  }

  .secondary-content {
    padding-top: 2px;
    &, a {
      color: lighten($text-color, 10%);
      font-size: 0.8rem;
      overflow: hidden;
      display: block;
    }
    i {
      vertical-align: bottom;
    }
  }
}

